# NumericalMethods

./: CMakeLists.txt  Logger.h  NumericalMethods.cpp  NumericalMethods.h  NumericalMethodsLab1.cpp  NumericalMethodsLab2.cpp  NumericalMethodsLab3.cpp  NumericalMethodsLab4.cpp  Reader.h  Root.h  main.cpp
labs/: lab1.cpp  lab1.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  lab4.cpp  lab4.h
